# TimeLineViewer_Linux

./: .gitignore  CMakeLists.txt  README.md  future_plans.md
data/test_files/: FILESYSTEM.txt  SUPER.txt
notes/: BRIEF.md  TODO.md  app_reqs.md
resources/: icons.qrc
src/: AppWindow.cpp  AppWindow.h  FieldDetailWindow.cpp  FieldDetailWindow.h  FilterBar.cpp  FilterBar.h  TimelineModel.cpp  TimelineModel.h  TimelineParser.cpp  TimelineParser.h  TimelineTab.cpp  TimelineTab.h  main.cpp
src/utils/: FileUtils.cpp  FileUtils.h  JsonXmlFormatter.cpp  JsonXmlFormatter.h
